--- a/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
+++ b/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
@@ -21,16 +21,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projeto integrador I",
+          subject: "Projeto Integrador II",
           size: 2,
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
-            "IIW2024A"
+            "IIW2023A"
           ],
-          time: "13:10 - 14:00",
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Fundamentos de informática",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
@@ -43,8 +56,8 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos de informática",
-          size: 1,
+          subject: "Projeto integrador I",
+          size: 2,
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
@@ -52,31 +65,13 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Fundamentos de informática",
-          size: 2,
-          teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
           time: "10:15 - 11:05",
           color: ""
         }
       ]
     },
     {
-      dayName: "Sexta-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Lógica de programação",
@@ -102,6 +97,24 @@ export const data = {
             "IIW2024A - Grupo A"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Fundamentos de informática",
+          size: 1,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
