--- a/docs/professor/gabriele_antico_freiria.mdx
+++ b/docs/professor/gabriele_antico_freiria.mdx
@@ -12,6 +12,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Biologia I",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
           subject: "Bioquímica",
           size: 4,
           teachers: [
@@ -28,29 +41,44 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Biologia I",
+          subject: "Biologia II",
           size: 2,
           teachers: [
-            "Gabriele Antico Freiria"
+            "Gabriele Antico Freiria",
+            "Karina Dias Espartosa"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 15-2",
           students: [
-            "IIW2024A"
+            "IIW2023A"
           ],
-          time: "10:15 - 11:05",
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
     },
     {
-      dayName: "Sexta-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Laboratório de Biologia",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
