--- a/docs/professor/karina_dias_espartosa.mdx
+++ b/docs/professor/karina_dias_espartosa.mdx
@@ -44,6 +44,20 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Biologia II",
+          size: 2,
+          teachers: [
+            "Gabriele Antico Freiria",
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
           subject: "Zoologia dos invertebrados I",
           size: 4,
           teachers: [
