--- a/docs/professor/lechan_colares_santos.mdx
+++ b/docs/professor/lechan_colares_santos.mdx
@@ -19,6 +19,19 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
+        },
+        {
+          subject: "Logistica Aplicada",
+          size: 2,
+          teachers: [
+            "Lechan Colares Santos"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "TGC2023"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -41,12 +54,7 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Introdução a Contabilidade",
           size: 2,
@@ -57,23 +65,14 @@ export const data = {
           students: [
             "TGC2024"
           ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Logistica Aplicada",
-          size: 2,
-          teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "TGC2023"
-          ],
           time: "21:00 - 21:50",
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
