--- a/docs/professor/michelli_cristina_galli.mdx
+++ b/docs/professor/michelli_cristina_galli.mdx
@@ -1,26 +1,12 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Octavio Henrique Viana",
+  title: "Michelli Cristina Galli",
   base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Topografia e Geoprocessamento",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "AGR2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -28,25 +14,25 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Irrigação e Drenagem",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Sala 2-2",
-          students: [
-            "AGR2023"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Língua Estrangeira Moderna - Espanhol",
+          size: 1,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "IIW2022A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
@@ -113,7 +99,7 @@ export const data = {
   ]
 }
 
-# Octavio Henrique Viana
+# Michelli Cristina Galli
 
 <div>
   {
