--- a/docs/professor/rafael_luis_bartz.mdx
+++ b/docs/professor/rafael_luis_bartz.mdx
@@ -8,18 +8,24 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          subject: "Lógica de programação",
           size: 2,
           teachers: [
+            "Humberto Fioravante Ferro",
             "Rafael Luis Bartz"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
-            "IIW2022B"
+            "IIW2024B"
           ],
           time: "07:30 - 08:20",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
         {
           subject: "Desenvolvimento WEB Orientado a Objetos",
           size: 2,
@@ -36,24 +42,19 @@ export const data = {
       ]
     },
     {
-      dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Lógica de programação",
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
           size: 2,
           teachers: [
-            "Humberto Fioravante Ferro",
             "Rafael Luis Bartz"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
-            "IIW2024B"
+            "IIW2022B"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
