--- a/docs/professor/sabrina_kerkhoff.mdx
+++ b/docs/professor/sabrina_kerkhoff.mdx
@@ -10,7 +10,21 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Química II",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -33,7 +47,7 @@ export const data = {
           students: [
             "IIW2024B - Grupo A"
           ],
-          time: "07:30 - 08:20",
+          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -46,7 +60,7 @@ export const data = {
           students: [
             "IIW2024B - Grupo B"
           ],
-          time: "09:25 - 10:15",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
