--- a/docs/professor/sergio_augusto_dias_castro.mdx
+++ b/docs/professor/sergio_augusto_dias_castro.mdx
@@ -1,48 +1,34 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Octavio Henrique Viana",
+  title: "Sérgio Augusto Dias Castro",
   base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Topografia e Geoprocessamento",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "AGR2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
       dayClasses: []
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Irrigação e Drenagem",
+          subject: "Matemática III",
           size: 2,
           teachers: [
-            "Octavio Henrique Viana"
+            "Sérgio Augusto Dias Castro"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Sala 3-1",
           students: [
-            "AGR2023"
+            "IIW2022A"
           ],
-          time: "21:00 - 21:50",
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -113,7 +99,7 @@ export const data = {
   ]
 }
 
-# Octavio Henrique Viana
+# Sérgio Augusto Dias Castro
 
 <div>
   {
