--- a/docs/professor/vagner_simoes_santos.mdx
+++ b/docs/professor/vagner_simoes_santos.mdx
@@ -6,7 +6,21 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Desenvolvimento Responsivo e Otimização de Sites",
+          size: 2,
+          teachers: [
+            "Vagner Simões Santos"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2022A"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -18,24 +32,25 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Desenvolvimento Responsivo e Otimização de Sites",
+          subject: "Serviços em nuvem",
           size: 2,
           teachers: [
             "Vagner Simões Santos"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
-            "IIW2022B"
+            "IIW2022A"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Serviços em nuvem",
           size: 2,
@@ -46,7 +61,20 @@ export const data = {
           students: [
             "IIW2022B"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Desenvolvimento Responsivo e Otimização de Sites",
+          size: 2,
+          teachers: [
+            "Vagner Simões Santos"
+          ],
+          classroom: "Laboratório de Informatica A - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
