--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -11,6 +11,45 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Desenvolvimento Responsivo e Otimização de Sites",
+          size: 2,
+          teachers: [
+            "Vagner Simões Santos"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2022A"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Trabalho de Conclusão de Curso",
+          size: 1,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "19:50 - 20:40",
+          color: ""
+        },
+        {
           subject: "Metodologia Científica e Técnicas de Apresentação de Trabalhos",
           size: 2,
           teachers: [
@@ -20,14 +59,89 @@ export const data = {
           students: [
             "AGR2024"
           ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 2,
+          teachers: [
+            "Sergio Ricardo Ferrazoli"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2023A"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
+        },
+        {
+          subject: "Elaboração de Projetos",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2023"
+          ],
           time: "19:00 - 19:50",
           color: ""
         },
         {
-          subject: "Gestão da Sustentabilidade",
+          subject: "Linguagem de Programação",
           size: 2,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Administração financeira e orçamentária",
+          size: 2,
+          teachers: [
+            "Lechan Colares Santos"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Design de loja, visual merchandising e franchising",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
@@ -39,13 +153,13 @@ export const data = {
       ]
     },
     {
-      dayName: "Terça-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Elaboração de Projetos",
+          subject: "Gestão da Sustentabilidade",
           size: 2,
           teachers: [
-            "Keyla Christina Almeida Portela"
+            "Marcos Rogério Oliveira"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
@@ -70,57 +184,21 @@ export const data = {
       ]
     },
     {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Administração financeira e orçamentária",
-          size: 2,
-          teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TGC2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Programação Orientada a Objetos",
-          size: 2,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TADS_ESP"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Linguagem de Programação",
-          size: 2,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TADS_ESP"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 2,
+          teachers: [
+            "Sergio Ricardo Ferrazoli"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
         {
           subject: "Projeto Integrador",
           size: 2,
@@ -132,19 +210,6 @@ export const data = {
             "AGR2023"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Design de loja, visual merchandising e franchising",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "TGC2023"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
