--- a/docs/sala/bloco_1/sala_3-1.mdx
+++ b/docs/sala/bloco_1/sala_3-1.mdx
@@ -1,39 +1,26 @@
 ---
-slug: /turma/tal2024
+slug: /sala/sala_3-1
 ---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "TAL2024",
-  base: "TAL",
+  title: "Sala 3-1",
+  base: "Bloco 1",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Microbiologia dos Alimentos",
-          size: 2,
+          subject: "Geografia II",
+          size: 1,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Alexandre Roberto Valcarenghi"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 3-1",
           students: [
-            "TAL2024"
+            "IIW2022A"
           ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Tecnologia de Glicídios e Lipídios",
-          size: 2,
-          teachers: [
-            "Daniele de Almeida Paula"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "21:00 - 21:50",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
@@ -42,29 +29,68 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Tecnologia de Carnes e Derivados I",
-          size: 2,
+          subject: "Geografia II",
+          size: 1,
           teachers: [
-            "Karen Cristina Guedes Silva"
+            "Alexandre Roberto Valcarenghi"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 3-1",
           students: [
-            "TAL2024"
+            "IIW2022A"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Tecnologia do Leite e Derivados",
+          subject: "Matemática III",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Sérgio Augusto Dias Castro"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 3-1",
           students: [
-            "TAL2024"
+            "IIW2022A"
           ],
-          time: "21:00 - 21:50",
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Química III",
+          size: 2,
+          teachers: [
+            "Cosme Oliveira da Silva"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Sociologia II",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "IIW2022A"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
+        },
+        {
+          subject: "História III",
+          size: 1,
+          teachers: [
+            "Suzane Conceição Pantolfi Tostes"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "IIW2022A"
+          ],
+          time: "15:55 - 16:45",
           color: ""
         }
       ]
@@ -73,29 +99,29 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Tecnologia do Pescado, Mel e Ovos",
-          size: 2,
+          subject: "História III",
+          size: 1,
           teachers: [
-            "Karen Cristina Guedes Silva"
+            "Suzane Conceição Pantolfi Tostes"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 3-1",
           students: [
-            "TAL2024"
+            "IIW2022A"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Tecnologia do Leite e Derivados",
+          subject: "Filosofia III",
           size: 2,
           teachers: [
-            "Daniele de Almeida Paula"
+            "José Provetti Júnior"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 3-1",
           students: [
-            "TAL2024"
+            "IIW2022A"
           ],
-          time: "21:00 - 21:50",
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
@@ -104,42 +130,16 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Tecnologia de Carnes e Derivados I",
-          size: 2,
-          teachers: [
-            "Karen Cristina Guedes Silva"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Microbiologia dos Alimentos",
+          subject: "Língua Estrangeira Moderna - Espanhol",
           size: 1,
           teachers: [
-            "Daniele de Almeida Paula"
+            "Michelli Cristina Galli"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 3-1",
           students: [
-            "TAL2024"
+            "IIW2022A"
           ],
-          time: "21:00 - 21:50",
-          color: ""
-        },
-        {
-          subject: "Tecnologia do Pescado, Mel e Ovos",
-          size: 1,
-          teachers: [
-            "Karen Cristina Guedes Silva"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "TAL2024"
-          ],
-          time: "21:50 - 22:40",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -148,16 +148,29 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Química Orgânica e Bioquímica dos Alimentos",
-          size: 4,
+          subject: "Língua Portuguesa e Literatura III",
+          size: 2,
           teachers: [
-            "Antonio Cesar Godoy"
+            "Yohana Diel Saheli"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "Sala 3-1",
           students: [
-            "TAL2024"
+            "IIW2022A"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Sociologia II",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "IIW2022A"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -223,7 +236,7 @@ export const data = {
   ]
 }
 
-# TAL2024
+# Sala 3-1
 
 <div>
   {
