--- a/docs/turma/iiw/iiw2024a.mdx
+++ b/docs/turma/iiw/iiw2024a.mdx
@@ -38,12 +38,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Educação Física I",
+          subject: "Matemática I",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Educação Física / Sala 1 B2",
+          classroom: "Sala 16-2",
           students: [
             "IIW2024A"
           ],
@@ -51,12 +51,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projeto integrador I",
+          subject: "Filosofia I",
           size: 2,
           teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
+            "José Provetti Júnior"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Sala 16-2",
           students: [
             "IIW2024A"
           ],
@@ -64,10 +64,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Lingua estrangeira - Inglês",
-          size: 1,
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 16-2",
           students: [
@@ -96,10 +96,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Lingua estrangeira - Inglês",
+          subject: "História I",
           size: 1,
           teachers: [
-            "Yohana Diel Saheli"
+            "Jael dos Santos"
           ],
           classroom: "Sala 16-2",
           students: [
@@ -122,16 +122,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia I",
-          size: 1,
+          subject: "Biologia I",
+          size: 2,
           teachers: [
-            "Fagner Guglielmi Pereira"
+            "Gabriele Antico Freiria"
           ],
           classroom: "Sala 16-2",
           students: [
             "IIW2024A"
           ],
           time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Educação Física I",
+          size: 2,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Educação Física / Sala 1 B2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
@@ -140,12 +153,12 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos de informática",
-          size: 1,
+          subject: "Física I",
+          size: 2,
           teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
+            "Alex Soares de Brito"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Física",
           students: [
             "IIW2024A"
           ],
@@ -153,25 +166,25 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
           teachers: [
-            "Pedro Leites Junior"
+            "Yohana Diel Saheli"
           ],
           classroom: "Sala 16-2",
           students: [
             "IIW2024A"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
-          subject: "Filosofia I",
+          subject: "Projeto integrador I",
           size: 2,
           teachers: [
-            "José Provetti Júnior"
+            "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2024A"
           ],
@@ -184,10 +197,10 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "História I",
+          subject: "Lingua estrangeira - Inglês",
           size: 1,
           teachers: [
-            "Jael dos Santos"
+            "Yohana Diel Saheli"
           ],
           classroom: "Sala 16-2",
           students: [
@@ -197,27 +210,53 @@ export const data = {
           color: ""
         },
         {
-          subject: "Física I",
+          subject: "Química I",
           size: 2,
           teachers: [
-            "Alex Soares de Brito"
+            "Cosme Oliveira da Silva"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "",
           students: [
-            "IIW2024A"
+            "IIW2024A - Grupo A"
           ],
           time: "08:20 - 09:10",
           color: ""
         },
         {
-          subject: "Biologia I",
+          subject: "Lógica de programação",
           size: 2,
           teachers: [
-            "Gabriele Antico Freiria"
+            "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica A",
           students: [
-            "IIW2024A"
+            "IIW2024A - Grupo B"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Lógica de programação",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A - Grupo A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Química I",
+          size: 2,
+          teachers: [
+            "Cosme Oliveira da Silva"
+          ],
+          classroom: "",
+          students: [
+            "IIW2024A - Grupo B"
           ],
           time: "10:15 - 11:05",
           color: ""
@@ -241,53 +280,40 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química I",
-          size: 2,
+          subject: "Sociologia I",
+          size: 1,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Fagner Guglielmi Pereira"
           ],
-          classroom: "",
+          classroom: "Sala 16-2",
           students: [
-            "IIW2024A - Grupo A"
+            "IIW2024A"
           ],
           time: "08:20 - 09:10",
           color: ""
         },
         {
-          subject: "Lógica de programação",
-          size: 2,
+          subject: "Fundamentos de informática",
+          size: 1,
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
-            "IIW2024A - Grupo B"
+            "IIW2024A"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
-          subject: "Lógica de programação",
+          subject: "Matemática I",
           size: 2,
           teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
+            "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Sala 16-2",
           students: [
-            "IIW2024A - Grupo A"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Química I",
-          size: 2,
-          teachers: [
-            "Cosme Oliveira da Silva"
-          ],
-          classroom: "",
-          students: [
-            "IIW2024A - Grupo B"
+            "IIW2024A"
           ],
           time: "10:15 - 11:05",
           color: ""
