--- a/docs/professor/alexandre_rodrigues_monge.mdx
+++ b/docs/professor/alexandre_rodrigues_monge.mdx
@@ -6,20 +6,42 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Projeto Integrador III",
+          subject: "Projeto Integrador II",
           size: 2,
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
           classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
-            "IIW2022B"
+            "IIW2023B"
           ],
           time: "10:15 - 11:05",
           color: ""
         },
+        {
+          subject: "Projeto Integrador III",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2022A"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
         {
           subject: "Projeto integrador I",
           size: 2,
@@ -30,13 +52,26 @@ export const data = {
           students: [
             "IIW2024B"
           ],
-          time: "13:10 - 14:00",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Laboratório de Banco de Dados",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
     },
     {
-      dayName: "Terça-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Laboratório de Banco de Dados",
@@ -48,31 +83,23 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Projeto Integrador II",
+          subject: "Projeto Integrador III",
           size: 2,
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
           classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2022B"
           ],
-          time: "15:05 - 15:55",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
