--- a/docs/professor/elenice_josefa_kolancko_setti.mdx
+++ b/docs/professor/elenice_josefa_kolancko_setti.mdx
@@ -1,93 +1,62 @@
----
-slug: /turma/agr2024
----
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "AGR2024",
-  base: "AGR",
+  title: "Elenice Josefa Kolancko Setti",
+  base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Topografia e Geoprocessamento",
+          subject: "Matemática II",
           size: 2,
           teachers: [
-            "Octavio Henrique Viana"
+            "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Sala 15-2",
           students: [
-            "AGR2024"
+            "IIW2023A"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Metodologia Científica e Técnicas de Apresentação de Trabalhos",
+          subject: "Matemática I",
           size: 2,
           teachers: [
-            "Cesar Gomes de Freitas"
+            "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Sala 16-2",
           students: [
-            "AGR2024"
+            "IIW2024A"
           ],
-          time: "21:00 - 21:50",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Culturas I",
-          size: 4,
-          teachers: [
-            "Sônia Maria Mandotti"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGR2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Piscicultura e Apicultura",
-          size: 4,
-          teachers: [
-            "Roberto Haruyoshi Ito"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGR2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Fertilidade, Manejo e Conservação dos Solos",
-          size: 4,
+          subject: "Matemática II",
+          size: 2,
           teachers: [
-            "Elias Franco"
+            "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Sala 6-2",
+          classroom: "Sala 15-2",
           students: [
-            "AGR2024"
+            "IIW2023A"
           ],
-          time: "19:00 - 19:50",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
@@ -96,16 +65,16 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Forragicultura e Pastagens",
-          size: 4,
+          subject: "Matemática I",
+          size: 2,
           teachers: [
-            "Marcos Rogério Oliveira"
+            "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Sala 6-2",
+          classroom: "Sala 16-2",
           students: [
-            "AGR2024"
+            "IIW2024A"
           ],
-          time: "19:00 - 19:50",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -171,7 +140,7 @@ export const data = {
   ]
 }
 
-# AGR2024
+# Elenice Josefa Kolancko Setti
 
 <div>
   {
