--- a/docs/professor/everaldo_lorensetti.mdx
+++ b/docs/professor/everaldo_lorensetti.mdx
@@ -1,48 +1,34 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Octavio Henrique Viana",
+  title: "Everaldo Lorensetti",
   base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Topografia e Geoprocessamento",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "AGR2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
       dayClasses: []
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Irrigação e Drenagem",
-          size: 2,
+          subject: "Sociologia II",
+          size: 1,
           teachers: [
-            "Octavio Henrique Viana"
+            "Everaldo Lorensetti"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Sala 3-1",
           students: [
-            "AGR2023"
+            "IIW2022A"
           ],
-          time: "21:00 - 21:50",
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -50,7 +36,21 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Sociologia II",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "IIW2022A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
@@ -113,7 +113,7 @@ export const data = {
   ]
 }
 
-# Octavio Henrique Viana
+# Everaldo Lorensetti
 
 <div>
   {
