--- a/docs/professor/fagner_guglielmi_pereira.mdx
+++ b/docs/professor/fagner_guglielmi_pereira.mdx
@@ -10,21 +10,7 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia I",
-          size: 1,
-          teachers: [
-            "Fagner Guglielmi Pereira"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -48,6 +34,19 @@ export const data = {
             "IIW2024A"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Fagner Guglielmi Pereira"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
