--- a/docs/professor/haroldo_yutaka_misunaga.mdx
+++ b/docs/professor/haroldo_yutaka_misunaga.mdx
@@ -25,12 +25,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Gestão da qualidade",
+          subject: "Plano de Negócio",
           size: 2,
           teachers: [
             "Haroldo Yutaka Misunaga"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Sala 14-2",
           students: [
             "TGC2023"
           ],
@@ -47,24 +47,6 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Plano de Negócio",
-          size: 2,
-          teachers: [
-            "Haroldo Yutaka Misunaga"
-          ],
-          classroom: "Sala 14-2",
-          students: [
-            "TGC2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
           subject: "Análise Econômica de Mercado",
           size: 2,
           teachers: [
@@ -76,8 +58,25 @@ export const data = {
           ],
           time: "19:00 - 19:50",
           color: ""
+        },
+        {
+          subject: "Gestão da qualidade",
+          size: 2,
+          teachers: [
+            "Haroldo Yutaka Misunaga"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2023"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
