--- a/docs/professor/jose_jurandir_pereira_junior.mdx
+++ b/docs/professor/jose_jurandir_pereira_junior.mdx
@@ -17,9 +17,14 @@ export const data = {
           students: [
             "TGC2024"
           ],
-          time: "19:00 - 19:50",
+          time: "21:00 - 21:50",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
         {
           subject: "Direito do Trabalho",
           size: 2,
@@ -30,14 +35,10 @@ export const data = {
           students: [
             "TGC2024"
           ],
-          time: "21:00 - 21:50",
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
