--- a/docs/professor/jose_provetti_junior.mdx
+++ b/docs/professor/jose_provetti_junior.mdx
@@ -6,14 +6,6 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Filosofia I",
@@ -25,7 +17,29 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "10:15 - 11:05",
+          time: "13:10 - 14:00",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Filosofia III",
+          size: 2,
+          teachers: [
+            "José Provetti Júnior"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "IIW2022A"
+          ],
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
@@ -36,7 +50,21 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Filosofia II",
+          size: 1,
+          teachers: [
+            "José Provetti Júnior"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
