--- a/docs/professor/josiane_paula_maltauro.mdx
+++ b/docs/professor/josiane_paula_maltauro.mdx
@@ -6,14 +6,24 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Arte I",
+          size: 2,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Arte I",
@@ -29,6 +39,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
