--- a/docs/professor/kleber_augusto_michalichem.mdx
+++ b/docs/professor/kleber_augusto_michalichem.mdx
@@ -8,6 +8,24 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Educação Física II",
+          size: 2,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
           subject: "Educação Física I",
           size: 2,
           teachers: [
@@ -17,21 +35,13 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "10:15 - 11:05",
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
     },
     {
-      dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
       dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Educação Física I",
@@ -43,10 +53,14 @@ export const data = {
           students: [
             "IIW2024B"
           ],
-          time: "07:30 - 08:20",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -61,7 +75,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
