--- a/docs/professor/samuel_stephan_milczuk.mdx
+++ b/docs/professor/samuel_stephan_milczuk.mdx
@@ -20,6 +20,19 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
         }
       ]
     },
@@ -39,11 +52,46 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
+        },
+        {
+          subject: "Desenvolvimento WEB Orientado a Objetos",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Comércio Eletrônico e Mídias Digitais",
@@ -55,18 +103,10 @@ export const data = {
           students: [
             "TGC2024"
           ],
-          time: "21:00 - 21:50",
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: []
     }
   ],
   time: [
