--- a/docs/professor/sergio_ricardo_ferrazoli.mdx
+++ b/docs/professor/sergio_ricardo_ferrazoli.mdx
@@ -17,21 +17,31 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "07:30 - 08:20",
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 2,
+          teachers: [
+            "Sergio Ricardo Ferrazoli"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2023A"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Administração de Sistemas Operacionais e Redes",
@@ -43,14 +53,32 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
     },
     {
-      dayName: "Sexta-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 2,
+          teachers: [
+            "Sergio Ricardo Ferrazoli"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
