--- a/docs/professor/suzane_conceicao_pantolfi_tostes.mdx
+++ b/docs/professor/suzane_conceicao_pantolfi_tostes.mdx
@@ -1,45 +1,45 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Octavio Henrique Viana",
+  title: "Suzane Conceição Pantolfi Tostes",
   base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Topografia e Geoprocessamento",
-          size: 2,
+          subject: "História III",
+          size: 1,
           teachers: [
-            "Octavio Henrique Viana"
+            "Suzane Conceição Pantolfi Tostes"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Sala 3-1",
           students: [
-            "AGR2024"
+            "IIW2022A"
           ],
-          time: "19:00 - 19:50",
+          time: "15:55 - 16:45",
           color: ""
         }
       ]
     },
     {
-      dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Irrigação e Drenagem",
-          size: 2,
+          subject: "História III",
+          size: 1,
           teachers: [
-            "Octavio Henrique Viana"
+            "Suzane Conceição Pantolfi Tostes"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Sala 3-1",
           students: [
-            "AGR2023"
+            "IIW2022A"
           ],
-          time: "21:00 - 21:50",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
@@ -113,7 +113,7 @@ export const data = {
   ]
 }
 
-# Octavio Henrique Viana
+# Suzane Conceição Pantolfi Tostes
 
 <div>
   {
