--- a/docs/professor/yohana_diel_saheli.mdx
+++ b/docs/professor/yohana_diel_saheli.mdx
@@ -6,24 +6,28 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Lingua estrangeira - Inglês",
-          size: 1,
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
           teachers: [
             "Yohana Diel Saheli"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 15-2",
           students: [
-            "IIW2024A"
+            "IIW2023A"
           ],
-          time: "15:05 - 15:55",
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
     },
     {
-      dayName: "Terça-Feira",
+      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Lingua estrangeira - Inglês",
@@ -41,16 +45,53 @@ export const data = {
       ]
     },
     {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Língua Portuguesa e Literatura III",
+          size: 2,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "IIW2022A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
