--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -11,6 +11,125 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Topografia e Geoprocessamento",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "AGR2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Programação Orientada a Objetos",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "TADS_ESP"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: [
+        {
+          subject: "Projeto Integrador III",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2022A"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Projetos Elétricos Residenciais e Prediais",
+          size: 4,
+          teachers: [
+            "Alex Miyamoto Mussi"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Laboratório de Banco de Dados",
+          size: 2,
+          teachers: [
+            "Alexandre Rodrigues Monge"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Desenho Assistido por computador",
+          size: 2,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "ELM2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Serviços em nuvem",
+          size: 2,
+          teachers: [
+            "Vagner Simões Santos"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2022A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Programação Orientada a Objetos",
           size: 2,
           teachers: [
@@ -24,24 +143,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Topografia e Geoprocessamento",
-          size: 2,
-          teachers: [
-            "Octavio Henrique Viana"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "AGR2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
-        {
           subject: "Linguagem de Programação",
           size: 2,
           teachers: [
@@ -51,56 +152,7 @@ export const data = {
           students: [
             "TADS_ESP"
           ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Trabalho de Conclusão de Curso",
-          size: 1,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "TADS_ESP"
-          ],
           time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Desenho Assistido por computador",
-          size: 2,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "ELM2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Projetos Elétricos Residenciais e Prediais",
-          size: 4,
-          teachers: [
-            "Alex Miyamoto Mussi"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
           color: ""
         }
       ]
