--- a/docs/sala/bloco_1/laboratorio_de_fisica.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_fisica.mdx
@@ -17,10 +17,6 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Física I",
@@ -32,14 +28,46 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Física III",
+          size: 2,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Física II",
+          size: 2,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
