--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -38,23 +38,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projeto integrador I",
+          subject: "Marketing de Relacionamento",
           size: 2,
           teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "IIW2024A"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        },
-        {
-          subject: "Direito do Trabalho",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
+            "Keyla Christina Almeida Portela"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
@@ -96,10 +83,23 @@ export const data = {
           color: ""
         },
         {
-          subject: "Estatística aplicada",
+          subject: "Desenvolvimento WEB Orientado a Objetos",
           size: 2,
           teachers: [
-            "Mauro César de Souza Siena"
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Direito do Trabalho",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
@@ -109,10 +109,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Gestão da informação, comunicação e documentação",
+          subject: "Estatística aplicada",
           size: 2,
           teachers: [
-            "Keyla Christina Almeida Portela"
+            "Mauro César de Souza Siena"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
@@ -127,8 +127,8 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos de informática",
-          size: 1,
+          subject: "Projeto integrador I",
+          size: 2,
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
@@ -136,7 +136,7 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -153,10 +153,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Comércio Eletrônico e Mídias Digitais",
+          subject: "Introdução a Contabilidade",
           size: 2,
           teachers: [
-            "Samuel Stephan Milczuk"
+            "Lechan Colares Santos"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
@@ -169,37 +169,6 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Introdução a Contabilidade",
-          size: 2,
-          teachers: [
-            "Lechan Colares Santos"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "TGC2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Marketing de Relacionamento",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "TGC2024"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Lógica de programação",
@@ -232,6 +201,50 @@ export const data = {
           size: 2,
           teachers: [
             "Haroldo Yutaka Misunaga"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "TGC2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Gestão da informação, comunicação e documentação",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Fundamentos de informática",
+          size: 1,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Comércio Eletrônico e Mídias Digitais",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
